# FullComp

./: .gitignore  CMakeLists.txt  library.cpp  library.h
fullcomp_test/: catch.hpp  rational_check.cpp
